// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdaptivityElementDialogContainer displays correct npc thumbnail for model "a-npc-alerobot" 1`] = `
<img
  alt="LearningImage!"
  class="invisible z-20 h-0 -scale-x-100 object-contain brightness-125 lg:visible lg:h-full"
  data-testid="npcImage"
  src="a-npc-alerobot-welcome.png"
/>
`;

exports[`AdaptivityElementDialogContainer displays correct npc thumbnail for model "a-npc-alerobot" 2`] = `
<img
  alt="LearningImage!"
  class="visible h-16 -scale-x-100 lg:invisible lg:h-0"
  data-testid="npcImage"
  src="a-npc-alerobot-welcome.png"
/>
`;

exports[`AdaptivityElementDialogContainer displays correct npc thumbnail for model "a-npc-defaultarcade" 1`] = `
<img
  alt="LearningImage!"
  class="invisible z-20 h-0 -scale-x-100 object-contain brightness-125 lg:visible lg:h-full"
  data-testid="npcImage"
  src="a-npc-sheriffjustice-welcome.png"
/>
`;

exports[`AdaptivityElementDialogContainer displays correct npc thumbnail for model "a-npc-defaultarcade" 2`] = `
<img
  alt="LearningImage!"
  class="visible h-16 -scale-x-100 lg:invisible lg:h-0"
  data-testid="npcImage"
  src="a-npc-sheriffjustice-welcome.png"
/>
`;

exports[`AdaptivityElementDialogContainer displays correct npc thumbnail for model "a-npc-defaultcampus" 1`] = `
<img
  alt="LearningImage!"
  class="invisible z-20 h-0 -scale-x-100 object-contain brightness-125 lg:visible lg:h-full"
  data-testid="npcImage"
  src="a-npc-teamb-male-welcome.png"
/>
`;

exports[`AdaptivityElementDialogContainer displays correct npc thumbnail for model "a-npc-defaultcampus" 2`] = `
<img
  alt="LearningImage!"
  class="visible h-16 -scale-x-100 lg:invisible lg:h-0"
  data-testid="npcImage"
  src="a-npc-teamb-male-welcome.png"
/>
`;

exports[`AdaptivityElementDialogContainer displays correct npc thumbnail for model "a-npc-defaultsuburb" 1`] = `
<img
  alt="LearningImage!"
  class="invisible z-20 h-0 -scale-x-100 object-contain brightness-125 lg:visible lg:h-full"
  data-testid="npcImage"
  src="a-npc-teamd-male-welcome.png"
/>
`;

exports[`AdaptivityElementDialogContainer displays correct npc thumbnail for model "a-npc-defaultsuburb" 2`] = `
<img
  alt="LearningImage!"
  class="visible h-16 -scale-x-100 lg:invisible lg:h-0"
  data-testid="npcImage"
  src="a-npc-teamd-male-welcome.png"
/>
`;

exports[`AdaptivityElementDialogContainer should render 1`] = `
<div>
  <div
    class=" flex gap-2 m-2 w-fit h-fit text-adlertextgrey"
  >
    <div
      class="fixed bottom-0 left-0 right-0 top-0 flex h-full w-screen flex-col items-center justify-center bg-black bg-opacity-30 lg:grid lg:grid-rows-3 lg:items-start"
      data-testid="adaptivity-dialogcontainer"
    >
      <div
        class="invisible row-start-2 flex w-full items-end justify-start pl-16 lg:visible lg:h-full"
      >
        <img
          alt="LearningImage!"
          class="invisible z-20 h-0 -scale-x-100 object-contain brightness-125 lg:visible lg:h-full"
          data-testid="npcImage"
          src="a-npc-alerobot-welcome.png"
        />
      </div>
      <div
        class="row-start-3 flex max-h-[100vh] w-full max-w-7xl items-start justify-center pb-2 pt-2 lg:max-h-[32vh] lg:w-[95vw] lg:pt-0"
      >
        <div
          class="flex h-full max-h-[95%] w-full max-w-[95%] flex-col justify-between rounded-lg bg-gradient-to-br from-adlerbggradientfrom to-adlerbggradientto p-2 lg:max-h-[100%] xl:px-8"
        >
          <div
            class="lg:roboto-black z-20 flex h-20 w-full items-center justify-center gap-2 overflow-hidden p-2 pb-3 text-xl font-bold text-adlerdarkblue lg:text-2xl"
          >
            <div
              class=""
            >
              <button
                class="roboto-black mr-2 xl:h-10 xl:w-10 justify-center p-1 lg:w-16 lg:h-16 md:w-14 md:h-14 sm:w-10 sm:h-10 w-10 h-10 aspect-square mobile-landscape:w-9 mobile-landscape:h-9 flex items-center text-sm rounded-lg hover:cursor-pointer lg:text-xl transition ease-in-out duration-75 active:translate-x-[1px] active:translate-y-[1px] active:border-b-2 active:border-r-2 active:border-transparent text-adlerdarkblue font-regular border-b-2 border-r-2 border-adlerdarkblue overflow-hidden box-border cursor-pointer bg-buttonbgblue landscape:hover:bg-adleryellow active:bg-adleryellow"
                data-testid="adaptivity-back"
                title="backToolTip"
              >
                ◀
              </button>
            </div>
            <img
              alt="LearningImage!"
              class="visible h-16 -scale-x-100 lg:invisible lg:h-0"
              data-testid="npcImage"
              src="a-npc-alerobot-welcome.png"
            />
            <div
              class="w-full text-xs lg:text-lg"
            >
              singleChoiceSelectedtestQuestionText
            </div>
            <button
              class="font-regular box-border flex aspect-square cursor-pointer items-center justify-center overflow-hidden rounded-lg border-b-2 border-r-2 border-adlerdarkblue bg-buttonbgblue text-adlerdarkblue transition duration-75 ease-in-out hover:cursor-pointer hover:border-adlerdarkblue hover:bg-adleryellow active:translate-x-[1px] active:translate-y-[1px] active:border-b-2 active:border-r-2 active:border-transparent lg:text-xl mobile-portrait:rounded-md roboto-black h-8 w-8 p-1 text-xs sm:h-10 sm:w-10 md:h-10 md:w-10 lg:h-10 lg:w-10 xl:h-10 xl:w-10"
              data-testid="closebutton"
              title="closeToolTip"
            >
              <img
                alt="CloseButton"
                class="h-6 w-6"
                src="close.svg"
              />
            </button>
          </div>
          <div
            class="max-h-[80vh] overflow-auto lg:max-h-[16vh] xl:max-h-[20vh]"
          >
            <div
              class="font-regular mb-4 flex h-fit items-center justify-center rounded-lg px-1 lg:mx-4"
            >
              <div
                class="m-auto flex w-full flex-col p-2 lg:flex-row lg:justify-between"
              >
                <div
                  class="flex flex-wrap justify-start gap-4"
                >
                  <div
                    class=""
                  >
                    <button
                      class="px-2 py-1 justify-center flex items-center text-sm rounded-lg hover:cursor-pointer lg:text-xl transition ease-in-out duration-75 active:translate-x-[1px] active:translate-y-[1px] active:border-b-2 active:border-r-2 active:border-transparent text-adlerdarkblue font-regular border-b-2 border-r-2 border-adlerdarkblue overflow-hidden box-border cursor-pointer bg-buttonbgblue landscape:hover:bg-adleryellow active:bg-adleryellow"
                      data-testid="adaptivity-answer-0"
                      title="answerToolTip"
                    >
                      <p
                        class="text-sm"
                      >
                        testAnswerText
                      </p>
                    </button>
                  </div>
                </div>
                <div
                  class="flex w-auto items-end justify-end gap-2 pt-8 font-bold lg:w-1/6"
                >
                  <div
                    class="fixed"
                  >
                    <div
                      class=""
                    >
                      <button
                        class="px-2 py-1 justify-center box-border text-adlerdeactivatedtext bg-adlerbuttonlocked flex items-center text-sm rounded-lg lg:text-xl font-regular overflow-hidden grayscale"
                        data-testid="adaptivity-submit"
                        disabled=""
                        title="submitTooltip"
                      >
                        <p
                          class="text-sm"
                        >
                          submitAnswer
                        </p>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div>
            <div
              class="modal-footer flex items-end justify-between pt-4 text-[0.5rem] lg:text-xs"
            >
              <p />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
